--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,5 +1,6 @@
 FROM almalinux:9
-LABEL author="VamshiKrishna" \
+LABEL author="A Vamshi Krishna" \
+      user="avkdocr" \
       company="avkdocr07" \
       topic="dockerfiles" \
       duration="2hrs"
