--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -3,6 +3,7 @@ RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
 ADD https://raw.githubusercontent.com/daws-81s/expense-infra-dev/refs/heads/main/readme.MD /usr/share/nginx/html/index.html
 RUN chmod +r /usr/share/nginx/html/index.html
+ADD sample-1.tar /tmp/
 CMD ["nginx", "-g", "daemon off ;"]
 
 
