--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -2,5 +2,5 @@ FROM almalinux:9
 RUN mkdir /tmp/docker
 WORKDIR /tmp/docker
 RUN pwd
-RUN echo "Hi how are you !!!" > hello.txt
+RUN echo "Hi how are you ...!!!  " > hello.txt
 CMD ["sleep", "200"]
