--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 ARG course="DevOps with AWS" \
     durantion="120 hrs"
-RUN "Course is $course, and Durantion is $durantion"
+RUN echo "Course is $course, and Duration is $durantion"
 CMD ["sleep", "200"]
