--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -2,3 +2,5 @@ FROM almalinux:9
 ENV course="DevOps with AWS" \
     trainer="Sivakumar Reddy" \
     duration="120 hrs"
+RUN echo "Course is $course, trainer is $trainer, and duration is $durantion"
+CMD ["sleep", "200"]
