--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -2,5 +2,5 @@ FROM almalinux:9
 ENV course="DevOps with AWS" \
     trainer="Sivakumar Reddy" \
     duration="120 hrs"
-RUN echo "Course is $course, trainer is $trainer, and duration is $duration"
+RUN echo "Course is: $course, trainer is: $trainer, and duration is: $duration"
 CMD ["sleep", "200"]
