--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -1,6 +1,9 @@
 FROM almalinux:9
-ENV course="DevOps with AWS" \
+ARG course="DevOps with AWS" \
     trainer="Sivakumar Reddy" \
     duration="120 hrs"
+ENV course=${course} \
+    trainer=${trainer} \
+    duration=${duration}
 RUN echo "Course is: $course, trainer is: $trainer, and duration is: $duration"
 CMD ["sleep", "200"]
