--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -2,8 +2,8 @@ FROM almalinux:9
 ARG course="DevOps with AWS" \
     trainer="Sivakumar Reddy" \
     duration="120 hrs"
-ENV course=${course} \
-    trainer=${trainer} \
-    duration=${duration}
-RUN echo "Course is: $course, trainer is: $trainer, and duration is: $duration"
+ENV course1=${course} \
+    trainer1=${trainer} \
+    duration1=${duration}
+RUN echo "Course is: $course1, trainer is: $trainer1, and duration is: $duration1"
 CMD ["sleep", "200"]
